# stmax-gui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build-linux.sh  build-windows.sh  build.rs
.github/workflows/: ci.yml
src/: app.rs  main.rs  protocol.rs  serial.rs
